--- a/public/index.html
+++ b/public/index.html
@@ -84,5 +84,12 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <!-- ===== JS Files ===== -->
+        <!-- <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+            referrerpolicy="no-referrer"
+        ></script> -->
+        <!-- <script src="./js/script.js"></script>
+        <script src="./js/style-switcher.js"></script> -->
     </body>
 </html>
