--- a/public/index.html
+++ b/public/index.html
@@ -44,52 +44,23 @@
             onload="this.media='all'"
             crossorigin="anonymous"
         />
-        <!-- <link rel="stylesheet" href="../src/assets/css/skins/color-1.css" />
-
-        <link
-            rel="stylesheet"
-            href="./css/skins/color-1.css"
-            class="alternate-style"
-            title="color-1"
-            disabled
-        />
-        <link
-            rel="stylesheet"
-            href="./css/skins/color-2.css"
-            class="alternate-style"
-            title="color-2"
-        />
-        <link
-            rel="stylesheet"
-            href="./css/skins/color-3.css"
-            class="alternate-style"
-            title="color-3"
-            disabled
-        />
-        <link
-            rel="stylesheet"
-            href="./css/skins/color-4.css"
-            class="alternate-style"
-            title="color-4"
-            disabled
-        />
-        <link
-            rel="stylesheet"
-            href="./css/skins/color-5.css"
-            class="alternate-style"
-            title="color-5"
-            disabled
-        /> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <!-- <canvas id="canvas"> </canvas> -->
+
         <!-- ===== JS Files ===== -->
-        <!-- <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
-            referrerpolicy="no-referrer"
-        ></script> -->
-        <!-- <script src="./js/script.js"></script>
-        <script src="./js/style-switcher.js"></script> -->
+        <!-- <script>
+            document.addEventListener("DOMContentLoaded", init);
+
+            // Placez ici le reste de votre code JavaScript
+            // ...
+
+            // La fonction init() sera appelée une fois que le DOM est chargé
+            function init() {
+                // Votre code d'initialisation va ici
+            }
+        </script> -->
     </body>
 </html>
