--- a/source/index.html
+++ b/source/index.html
@@ -1004,23 +1004,23 @@
             <div class="colors">
                 <span
                     class="color-1"
-                    onclick="setActiveStyle('color-1')"
+                    onClick={changeToTheme1}
                 ></span>
                 <span
                     class="color-2"
-                    onclick="setActiveStyle('color-2')"
+                    onClick={changeToTheme2}
                 ></span>
                 <span
                     class="color-3"
-                    onclick="setActiveStyle('color-3')"
+                    onClick={changeToTheme1}
                 ></span>
                 <span
                     class="color-4"
-                    onclick="setActiveStyle('color-4')"
+                    onClick={changeToTheme1}
                 ></span>
                 <span
                     class="color-5"
-                    onclick="setActiveStyle('color-5')"
+                    onClick={changeToTheme1}
                 ></span>
             </div>
         </div>
