correction orthographe fr

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             sizes="32x32"
             type="image/x-icon"
         />
-        <link rel="apple-touch-icon" href="./icone-argentBank.svg" />
+        <!-- <link rel="apple-touch-icon" href="./icone-argentBank.svg" /> -->
 
         <meta
             name="description"
